Closed
Bug 1170296
Opened 10 years ago
Closed 10 years ago
GCF test case 31.4.2.1.1.2 failure: HOLD button stops responding if hold fails for a conference call
Categories
(Firefox OS Graveyard :: RIL, defect)
Tracking
(blocking-b2g:2.2+, b2g-v2.2 fixed, b2g-master unaffected)
| Tracking | Status | |
|---|---|---|
| b2g-v2.2 | --- | fixed |
| b2g-master | --- | unaffected |
People
(Reporter: pgravel, Assigned: bhsu)
References
Details
(Whiteboard: [caf priority: p2][CR 846400])
Attachments
(1 file)
|
1.03 KB,
patch
|
aknow
:
review+
jocheng
:
approval-mozilla-b2g37+
|
Details | Diff | Splinter Review |
This is very similar to bug 1160325, which was fixed with bug 1161403, but that fix only resolved the single-call case.
Steps to reproduce:
* Have a conference call up
* Try to hold the conference call and have the network reject the hold request
* Now hold button is no longer responsive
One observable difference between the single-call and the conference call case is that with the latter isn't a promise.
Updated•10 years ago
|
Whiteboard: [CR 846400] → [caf priority: p2][CR 846400]
Comment 3•10 years ago
|
||
Comms triage: Certification blocker.
Blocks: 977588
blocking-b2g: 2.2? → 2.2+
| Assignee | ||
Comment 4•10 years ago
|
||
| Assignee | ||
Comment 5•10 years ago
|
||
Hi Hsinyi and Phil,
After reproducing this isuue on the emulator, I think the root cause might be the way we determine whether a |conferenceGroup| is active, which makes the dialer send wrong requests after failing to hold the call. Here is a more wordy explaination, after recieving and processing a hold request, the internal state of the |conferenceGroup| becomes |holding| and be taken as inactive, and then when we press the |hold button| on the dialer, according to the inactiveness, it sends out a resume request insteads of a hold request, which makes |hold button| not work as we expected.
Flags: needinfo?(bhsu)
| Assignee | ||
Comment 6•10 years ago
|
||
Hi Phil,
Since I can only try this patch on the emulator, I'm not sure whether the patch works for you. Can you try this patch out first? I'll request a review for it once recieving your confirmation. Thanks.
Assignee: nobody → bhsu
Flags: needinfo?(pgravel)
Updated•10 years ago
|
Component: Gaia::Dialer → RIL
| Assignee | ||
Comment 7•10 years ago
|
||
Comment on attachment 8614491 [details] [diff] [review]
Take |holding| as one of the active states
Hi Aknow,
The details are described in comment 5. Can you review this patch?
Attachment #8614491 -
Flags: review?(szchen)
Updated•10 years ago
|
Attachment #8614491 -
Flags: review?(szchen) → review+
| Assignee | ||
Comment 8•10 years ago
|
||
Thanks, that seems to do the trick.
Flags: needinfo?(pgravel)
| Assignee | ||
Comment 10•10 years ago
|
||
Comment on attachment 8614491 [details] [diff] [review]
Take |holding| as one of the active states
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 1170296
User impact if declined:
Once we fail to hold a conference call, we can no longer hold the conference call.
Testing completed:
Functionality is manually tested with emulator,
and regression is automatically tested with try-server.
Risk to taking this patch (and alternatives if risky): NA
String or UUID changes made by this patch: NA
Attachment #8614491 -
Flags: approval-mozilla-b2g37?
Updated•10 years ago
|
status-b2g-v2.2:
--- → affected
status-b2g-master:
--- → affected
Comment 11•10 years ago
|
||
Hi Ben,
Thanks for the help.
I am waiting for master landed before 2.2 approval.
Flags: needinfo?(bhsu)
| Assignee | ||
Comment 12•10 years ago
|
||
Hi Josh,
Sorry for such a late response and not making things clear. In fact, the |holding| state is entirely deprecated in mozilla-central since bug 1131403, so we cannot land this patch to mozilla-central. In other words, this patch is dedicated to branch 2.2.
Flags: needinfo?(bhsu)
Updated•10 years ago
|
Comment 13•10 years ago
|
||
Comment on attachment 8614491 [details] [diff] [review]
Take |holding| as one of the active states
Thanks Ben!
Attachment #8614491 -
Flags: approval-mozilla-b2g37? → approval-mozilla-b2g37+
Comment 14•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.2 S14 (12june)
You need to log in
before you can comment on or make changes to this bug.
Description
•