Bug 1170296 - Take |holding| as one of the active states. r=aknow, a=jocheng